--- a/static/styles.css
+++ b/static/styles.css
@@ -1,22 +1,22 @@
 @font-face {
   font-family: "WhitePigeon";
-  src: url("./fonts/WhitePigeon-BW6w5.ttf") format("truetype");
+  src: url("../fonts/WhitePigeon-BW6w5.ttf") format("truetype");
 }
 @font-face {
   font-family: "Untlang";
-  src: url("./fonts/Untlang-1G1rB.ttf") format("truetype");
+  src: url("../fonts/Untlang-1G1rB.ttf") format("truetype");
 }
 @font-face {
   font-family: "StayWork";
-  src: url("./fonts/StayworkRegular-axrEo.otf") format("opentype");
+  src: url("../fonts/StayworkRegular-axrEo.otf") format("opentype");
 }
 @font-face {
   font-family: "QuiteMagical";
-  src: url("./fonts/QuiteMagicalRegular-8VA2.ttf") format("truetype");
+  src: url("../fonts/QuiteMagicalRegular-8VA2.ttf") format("truetype");
 }
 @font-face {
   font-family: "almondlatte";
-  src: url("./fonts/Almondlatte-BWgYd.ttf") format("truetype");
+  src: url("../fonts/Almondlatte-BWgYd.ttf") format("truetype");
 }
 
 :root {
@@ -50,7 +50,6 @@
 html,
 body {
   /* height: 100vh; */
-
   background-color: #f5f0e4;
 }
 
@@ -165,20 +164,50 @@ body {
 .aboutBoxes {
   display: flex;
   flex-direction: column;
-  color: var(--dark-brown);
   font-family: "StayWork", sans-serif;
   font-size: 25px;
 }
 
 .aboutBox {
   margin: 6px 0;
-  width: 50vw;
+  width: 40vw;
 }
 
 .aboutBox h2 {
   font-family: "whitepigeon", sans-serif;
 }
 
+.aboutBox:nth-child(1) {
+  color: var(--dark-brown);
+}
+
+.aboutBox:nth-child(2) {
+  color: var(--light-brown);
+}
+
+.aboutBox:nth-child(3) {
+  color: var(--olive);
+}
+
+.hide {
+  display: none;
+}
+
+.aboutHeader {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.arrow {
+  height: 30px;
+  width: 30px;
+  stroke: var(--dark-brown);
+}
+
+.open {
+  transform: rotate(90deg);
+}
 /* .aboutBox:nth-child(2) {
   margin-left: 20px;
 } */
