--- a/static/styles.css
+++ b/static/styles.css
@@ -216,7 +216,7 @@ body {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-evenly;
   padding: 70px 20px 0 20px;
 }
 
